--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <div class="tab active" data-target="peugeot">Peugeot</div>
     <div class="tab" data-target="vw">Volkswagen</div>
     <div class="tab" data-target="fiat">Fiat</div>
+     <div class="tab" data-target="ford">Ford</div>
   </div>  <div class="content">
     <div id="peugeot" class="tab-content">
       <h2>Peugeot</h2><div class="car-card">
@@ -81,6 +82,15 @@
   </div>
 </div>
 
+    <div id="ford" class="tab-content hidden">
+  <h2>Ford</h2>
+  <div class="car-card">
+    <h3>Fiesta</h3>
+    <p><b>Ano:</b> 2005–2012</p>
+    <p><b>Características:</b> barato, simples, fácil de modificar.</p>
+  </div>
+</div>
+    
 <div id="fiat" class="tab-content hidden">
   <h2>Fiat</h2>
   <div class="car-card">
