--- a/index.html
+++ b/index.html
@@ -115,3 +115,388 @@
     });
   </script></body>
 </html>
+<!-- ============================
+ VOLKSWAGEN
+============================= -->
+<div id="volkswagen" class="tab-content hidden">
+  <h2>Volkswagen</h2>
+
+  <div class="car-card">
+    <h3>Golf</h3>
+    <p><b>Ano:</b> 1998–2015</p>
+    <p><b>Características:</b> esportivo, boa dirigibilidade.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Polo</h3>
+    <p><b>Ano:</b> 2002–2018</p>
+    <p><b>Características:</b> moderno, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Jetta</h3>
+    <p><b>Ano:</b> 2011–2019</p>
+    <p><b>Características:</b> potente, confortável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Gol</h3>
+    <p><b>Ano:</b> G1–G5</p>
+    <p><b>Características:</b> popular, barato, fácil manutenção.</p>
+  </div>
+</div>
+
+<!-- ============================
+ CHEVROLET
+============================= -->
+<div id="chevrolet" class="tab-content hidden">
+  <h2>Chevrolet</h2>
+
+  <div class="car-card">
+    <h3>Onix</h3>
+    <p><b>Ano:</b> 2013–2020</p>
+    <p><b>Características:</b> econômico, tecnológico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Cruze</h3>
+    <p><b>Ano:</b> 2012–2017</p>
+    <p><b>Características:</b> confortável, bom desempenho.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Celta</h3>
+    <p><b>Ano:</b> 2001–2007</p>
+    <p><b>Características:</b> barato, confiável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Astra</h3>
+    <p><b>Ano:</b> 1999–2007</p>
+    <p><b>Características:</b> forte, bom custo-benefício.</p>
+  </div>
+</div>
+
+<!-- ============================
+ FORD
+============================= -->
+<div id="ford" class="tab-content hidden">
+  <h2>Ford</h2>
+
+  <div class="car-card">
+    <h3>Fiesta</h3>
+    <p><b>Ano:</b> 2005–2012</p>
+    <p><b>Características:</b> barato, simples.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Focus</h3>
+    <p><b>Ano:</b> 2005–2014</p>
+    <p><b>Características:</b> estável, boa direção.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Ka</h3>
+    <p><b>Ano:</b> 2008–2015</p>
+    <p><b>Características:</b> compacto, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Fusion</h3>
+    <p><b>Ano:</b> 2008–2017</p>
+    <p><b>Características:</b> luxuoso, confortável.</p>
+  </div>
+</div>
+
+<!-- ============================
+ FIAT
+============================= -->
+<div id="fiat" class="tab-content hidden">
+  <h2>Fiat</h2>
+
+  <div class="car-card">
+    <h3>Uno</h3>
+    <p><b>Ano:</b> 1995–2010</p>
+    <p><b>Características:</b> econômico, resistente.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Palio</h3>
+    <p><b>Ano:</b> 1999–2012</p>
+    <p><b>Características:</b> popular, manutenção barata.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Argo</h3>
+    <p><b>Ano:</b> 2018+</p>
+    <p><b>Características:</b> moderno, bem equipado.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Mobi</h3>
+    <p><b>Ano:</b> 2017+</p>
+    <p><b>Características:</b> compacto, econômico.</p>
+  </div>
+</div>
+
+<!-- ============================
+ RENAULT
+============================= -->
+<div id="renault" class="tab-content hidden">
+  <h2>Renault</h2>
+
+  <div class="car-card">
+    <h3>Clio</h3>
+    <p><b>Ano:</b> 2002–2008</p>
+    <p><b>Características:</b> leve, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Sandero</h3>
+    <p><b>Ano:</b> 2007–2014</p>
+    <p><b>Características:</b> espaçoso, prático.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Logan</h3>
+    <p><b>Ano:</b> 2007–2014</p>
+    <p><b>Características:</b> grande, barato.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Duster</h3>
+    <p><b>Ano:</b> 2012–2020</p>
+    <p><b>Características:</b> robusto, espaçoso.</p>
+  </div>
+</div>
+
+<!-- ============================
+ PEUGEOT
+============================= -->
+<div id="peugeot" class="tab-content hidden">
+  <h2>Peugeot</h2>
+
+  <div class="car-card">
+    <h3>206</h3>
+    <p><b>Ano:</b> 2001–2005</p>
+    <p><b>Características:</b> leve, bom para projetos.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>207</h3>
+    <p><b>Ano:</b> 2010</p>
+    <p><b>Características:</b> atualizado, confortável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>208</h3>
+    <p><b>Ano:</b> 2013–2020</p>
+    <p><b>Características:</b> moderno, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>3008</h3>
+    <p><b>Ano:</b> 2011–2017</p>
+    <p><b>Características:</b> suv moderno, tecnológico.</p>
+  </div>
+</div>
+
+<!-- ============================
+ CITROËN
+============================= -->
+<div id="citroen" class="tab-content hidden">
+  <h2>Citroën</h2>
+
+  <div class="car-card">
+    <h3>C3</h3>
+    <p><b>Ano:</b> 2003–2013</p>
+    <p><b>Características:</b> confortável, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>C4 Lounge</h3>
+    <p><b>Ano:</b> 2013</p>
+    <p><b>Características:</b> espaçoso, silencioso.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Aircross</h3>
+    <p><b>Ano:</b> 2011</p>
+    <p><b>Características:</b> alto, confortável.</p>
+  </div>
+</div>
+
+<!-- ============================
+ HONDA
+============================= -->
+<div id="honda" class="tab-content hidden">
+  <h2>Honda</h2>
+
+  <div class="car-card">
+    <h3>Civic</h3>
+    <p><b>Ano:</b> 2006–2017</p>
+    <p><b>Características:</b> confiável, forte.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Fit</h3>
+    <p><b>Ano:</b> 2009–2015</p>
+    <p><b>Características:</b> espaçoso, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>City</h3>
+    <p><b>Ano:</b> 2010–2015</p>
+    <p><b>Características:</b> confortável, econômico.</p>
+  </div>
+</div>
+
+<!-- ============================
+ TOYOTA
+============================= -->
+<div id="toyota" class="tab-content hidden">
+  <h2>Toyota</h2>
+
+  <div class="car-card">
+    <h3>Corolla</h3>
+    <p><b>Ano:</b> 2005–2020</p>
+    <p><b>Características:</b> confiável, durável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Etios</h3>
+    <p><b>Ano:</b> 2012</p>
+    <p><b>Características:</b> econômico, simples.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Yaris</h3>
+    <p><b>Ano:</b> 2019</p>
+    <p><b>Características:</b> moderno, confortável.</p>
+  </div>
+</div>
+
+<!-- ============================
+ HYUNDAI
+============================= -->
+<div id="hyundai" class="tab-content hidden">
+  <h2>Hyundai</h2>
+
+  <div class="car-card">
+    <h3>HB20</h3>
+    <p><b>Ano:</b> 2013–2020</p>
+    <p><b>Características:</b> econômico, moderno.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Creta</h3>
+    <p><b>Ano:</b> 2017–2022</p>
+    <p><b>Características:</b> suv, confortável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>i30</h3>
+    <p><b>Ano:</b> 2010–2013</p>
+    <p><b>Características:</b> esportivo, bom acabamento.</p>
+  </div>
+</div>
+
+<!-- ============================
+ NISSAN
+============================= -->
+<div id="nissan" class="tab-content hidden">
+  <h2>Nissan</h2>
+
+  <div class="car-card">
+    <h3>March</h3>
+    <p><b>Ano:</b> 2012</p>
+    <p><b>Características:</b> leve, econômico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Versa</h3>
+    <p><b>Ano:</b> 2013–2020</p>
+    <p><b>Características:</b> espaçoso, prático.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Sentra</h3>
+    <p><b>Ano:</b> 2010–2017</p>
+    <p><b>Características:</b> confortável, silencioso.</p>
+  </div>
+</div>
+
+<!-- ============================
+ BMW
+============================= -->
+<div id="bmw" class="tab-content hidden">
+  <h2>BMW</h2>
+
+  <div class="car-card">
+    <h3>Série 3</h3>
+    <p><b>Ano:</b> 2006–2019</p>
+    <p><b>Características:</b> esportivo, premium.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Série 1</h3>
+    <p><b>Ano:</b> 2012–2016</p>
+    <p><b>Características:</b> compacto, forte.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>X1</h3>
+    <p><b>Ano:</b> 2013–2018</p>
+    <p><b>Características:</b> suv, refinado.</p>
+  </div>
+</div>
+
+<!-- ============================
+ MERCEDES
+============================= -->
+<div id="mercedes" class="tab-content hidden">
+  <h2>Mercedes-Benz</h2>
+
+  <div class="car-card">
+    <h3>Classe C</h3>
+    <p><b>Ano:</b> 2008–2015</p>
+    <p><b>Características:</b> luxuoso, confortável.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Classe A</h3>
+    <p><b>Ano:</b> 2014–2019</p>
+    <p><b>Características:</b> moderno, tecnológico.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>GLA</h3>
+    <p><b>Ano:</b> 2015</p>
+    <p><b>Características:</b> suv, premium.</p>
+  </div>
+</div>
+
+<!-- ============================
+ AUDI
+============================= -->
+<div id="audi" class="tab-content hidden">
+  <h2>Audi</h2>
+
+  <div class="car-card">
+    <h3>A3</h3>
+    <p><b>Ano:</b> 2008–2021</p>
+    <p><b>Características:</b> premium, eficiente.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>A4</h3>
+    <p><b>Ano:</b> 2009–2016</p>
+    <p><b>Características:</b> confortável, moderno.</p>
+  </div>
+
+  <div class="car-card">
+    <h3>Q3</h3>
+    <p><b>Ano:</b> 2013–2019</p>
+    <p><b>Características:</b> suv, luxuoso.</p>
+  </div>
+</div>
