--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <!-- ============================
  VOLKSWAGEN
 ============================= -->
-<div id="volkswagen" class="tab-content hidden">
+<div id="vw" class="tab-content hidden">
   <h2>Volkswagen</h2>
 
   <div class="car-card">
