--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
     <p><b>Características:</b> leve, resistente, perfeito para projetos baratos.</p>
   </div>
 </div>
+    <div id="vw" class="tab-content hidden">
+  <h2>Volkswagen</h2>
+
+  <div class="car-card">
+    <h3>Golf</h3>
+    <p><b>Ano:</b> 1998–2015</p>
+    <p><b>Características:</b> esportivo, boa dirigibilidade.</p>
+  </div>
 
   </div>  <script>
     const tabs = document.querySelectorAll('.tab');
