--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <p><b>Ano:</b> 1998–2015</p>
     <p><b>Características:</b> esportivo, boa dirigibilidade.</p>
   </div>
+</div>
 
   </div>  <script>
     const tabs = document.querySelectorAll('.tab');
