--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="tab" data-target="vw">Volkswagen</div>
     <div class="tab" data-target="fiat">Fiat</div>
      <div class="tab" data-target="ford">Ford</div>
+    <div class="tab" data-target="citroen">Citroën</div>
   </div>  <div class="content">
     <div id="peugeot" class="tab-content">
       <h2>Peugeot</h2><div class="car-card">
@@ -80,8 +81,15 @@
     <p><b>Ano:</b> 2005–2012</p>
     <p><b>Características:</b> barato, simples, fácil de modificar.</p>
   </div>
-</div>
 
+  <div id="vw" class="tab-content hidden">
+  <h2>Volkwangen</h2>
+  <div class="car-card">
+    <h3>Golf</h3>
+    <p><b>Ano:</b> 1998–2015</p>
+    <p><b>Características:</b> leve, resistente, perfeito para projetos baratos.</p>
+  </div>
+</div>
     <div id="ford" class="tab-content hidden">
   <h2>Ford</h2>
   <div class="car-card">
@@ -107,14 +115,7 @@
     <p><b>Características:</b> leve, resistente, perfeito para projetos baratos.</p>
   </div>
 </div>
- <div id="vw" class="tab-content hidden">
-  <h2>Volkswagen</h2>
-  <div class="car-card">
-    <h3>Golf</h3>
-    <p><b>Ano:</b> 1998–2015</p>
-    <p><b>Características:</b> esportivo, boa dirigibilidade.</p>
-  </div>
-</div>
+
 
   </div>  <script>
     const tabs = document.querySelectorAll('.tab');
